<resources>
    <string name="app_name">Views Coloring</string>
    <string name="box_one">Box 1</string>
    <string name="box_two">Box 2</string>
    <string name="box_three">Box 3</string>
    <string name="box_four">Box 4</string>
    <string name="box_five">Box 5</string>

    <string name="button_green">Green</string>
    <string name="button_red">Red</string>
    <string name="button_yellow">Yellow</string>

    <string name="how_play">How to Play</string>
    <string name="tap_screen">Tap the Screens and Buttons</string>
</resources>